--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -354,6 +354,7 @@ a.author[href$="srsbsnsman"],
 a.author[href$="Sangfroidish"],
 a.author[href$="ctare"],
 a.author[href$="Draze"],
+a.author[href$="TheCommieDuck"],
 a.author[href$="thepostaldud3"],
 a.author[href$="Dundrioundio"],
 a.author[href$="Dwarflord"],
@@ -378,6 +379,7 @@ a.author[href$="thepostaldud3"]:before,
 a.author[href$="Dundrioundio"]:before,
 a.author[href$="Dwarflord"]:before,
 a.author[href$="Draze"]:before,
+a.author[href$="TheCommieDuck"]:before,
 a.author[href$="KommandantSprakle"]:before,
 a.author[href$="scix"],
 a.author[href$="sna_fu_bar"]:before
@@ -397,6 +399,7 @@ a.author[href$="sna_fu_bar"]:before {content: "foreman anus_barf"}
 a.author[href$="Dundrioundio"]:before {content: "Dundrio"}
 a.author[href$="Dwarflord"]:before {content: "Cinor"}
 a.author[href$="scix"]:before {content: "Hi"}
+a.author[href$="TheCommieDuck"]:before {content: "Flutterslut"}
 a.author[href$="thepostaldud3"]:before {content: "steev"}
 
 
@@ -429,7 +432,7 @@ a.author[href$="Dundrioundio"]:after
 /*Extra text here, add spaces so it looks nice*/
 a.author[href$="Sangfroidish"]:after { content:" Lost his personal divining rod "}
 a.author[href$="sna_fu_bar"]:after {content:" Sneaky squid "}
-a.author[href$="DoomedCivilian"]:after { content:" CSS Puppet Master and lesser Demigod "}
+a.author[href$="DoomedCivilian"]:after { content:" Scandalously Raunchy "}
 a.author[href$="Draze"]:after { content: " Prince of the Dark Bronies "}
 a.author[href$="TheCommieDuck"]:after {content:" 9/10 10yo "}
 a.author[href$="duruz"]:after { content: " Still doesn't oil up "}
