--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -15,7 +15,7 @@
 
 .sidecontentbox .helplink + .title h1 { font-size: 0}
 
-.sidecontentbox .helplink + .title h1:before { font-size: 10pt; content: "RED 'N' BLACK ALICORN GODS" }  
+.sidecontentbox .helplink + .title h1:before { font-size: 10pt; content: "CHAOS GUNS" }  
 
 /*END CHANGE NAME OF MODERATORS BOX*/
 
@@ -619,10 +619,11 @@ padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:grey;}
 
 .flair-syntaxerror
-{ color:#21ff21; 
-border: 2px solid #98ff98; border-radius: 20px; 
-padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
-background-color:#fffff0;}
+{ color:#8BCB25;
+font-family: "Lucida Console", Monaco, monospace;
+border: 2px solid #C5FF6E; border-radius: 20px; 
+padding-left:6px; padding-right:5px; padding-bottom:1px; padding-top:1px;
+background-color:#FFFDD7;}
 
 .flair-clackerspotlight
 { color:black; 
@@ -798,7 +799,7 @@ border: 2px solid orange; border-radius: 20px;
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:blue;}
 
-.flair-jon
+.flair-cygnus
 { color:brown; 
 border: 2px solid lightblue; border-radius: 20px; 
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
@@ -940,7 +941,7 @@ a[href|="/swordserious"] {width:88px;height:132px;background-position: -815px -1
 
 /* SYNTAX ERROR */ 
 
-a[href|="/sebored"], a[href|="/sehahaha"], a[href|="/sesly"], a[href|="/synpoker"], a[href|="/synponder"], a[href|="/synsquint"], a[href|="/syntaxderp"], a[href|="/syntaxadorkable"], a[href|="/sehuhhuh"], a[href|="/sejoy"], a[href|="/seohhi"], a[href|="/synsmile"], a[href|="/secute"], a[href|="/squintax"], a[href|="/syntaxmeerkat"], a[href|="/robyxmeerkat"], a[href|="/synkathug"], a[href|="/seboring"], a[href|="/sefacehoof"], a[href|="/synwb"], a[href|="/sesup"], a[href|="/synfun"], a[href|="/synangry"], a[href|="/syncutestare"], a[href|="/sepout"]
+a[href|="/sebored"], a[href|="/sehahaha"], a[href|="/sesly"], a[href|="/synpoker"], a[href|="/synponder"], a[href|="/synsquint"], a[href|="/syntaxderp"], a[href|="/syntaxadorkable"], a[href|="/sehuhhuh"], a[href|="/sejoy"], a[href|="/seohhi"], a[href|="/synsmile"], a[href|="/secute"], a[href|="/squintax"], a[href|="/syntaxmeerkat"], a[href|="/robyxmeerkat"], a[href|="/synkathug"], a[href|="/seboring"], a[href|="/sefacehoof"], a[href|="/synwb"], a[href|="/sesup"], a[href|="/synfun"], a[href|="/synangry"], a[href|="/syncutestare"], a[href|="/sepout"], a[href|="/sehugs"]
 {background-image:url(%%syntax-error%%);display:block;float:left;}
 
 a[href|="/sebored"] {width:88px;height:70px;background-position: 0 0;}
@@ -967,6 +968,7 @@ a[href|="/synfun"] {width:244px;height:150px;background-position: 0 -220px;}
 a[href|="/synangry"] {width:70px;height:70px;background-position: 0 -370px;}
 a[href|="/syncutestare"] {width:78px;height:100px;background-position: -919px -70px;}
 a[href|="/sepout"] {width:83px;height:100px;background-position: -244px -220px;}
+a[href|="/sehugs"] {width:181px;height:100px;background-position: -327px -220px;}
 
 /* END OF SYNTAX ERROR */
 
@@ -1033,7 +1035,7 @@ a[href|="/dhsquinty"] {width:68px;height:70px;background-position: -263px 0;}
 
 /* Aerohead */
 
-a[href|="/aerowb"], a[href|="/aerosup"], a[href|="/aeroangry"], a[href|="/aerocutestare"], a[href|="/aeropout"] 
+a[href|="/aerowb"], a[href|="/aerosup"], a[href|="/aeroangry"], a[href|="/aerocutestare"], a[href|="/aeropout"], a[href|="/aerohugs"]
 {background-image:url(%%aerohead%%);display:block;float:left;}
 
 a[href|="/aerowb"] {width:129px;height:150px;background-position: 0 -70px;}
@@ -1041,7 +1043,24 @@ a[href|="/aerosup"] {width:182px;height:150px;background-position: -129px -70px;
 a[href|="/aeroangry"] {width:62px;height:70px;background-position: 0 0;}
 a[href|="/aerocutestare"] {width:80px;height:100px;background-position: -311px -70px;}
 a[href|="/aeropout"] {width:85px;height:100px;background-position: -391px -70px;}
+a[href|="/aerohugs"] {width:183px;height:100px;background-position: -476px -70px;}
 
 /* END OF AEROHEAD */
+
+/* ROCK CANDY */
+
+a[href|="/candyderp"], a[href|="/rcbored"], a[href|="/rccute"], a[href|="/rcfacehoof"], a[href|="/rchahaha"], a[href|="/rchuhhuh"], a[href|="/rcsly"], a[href|="/rcpoker"] 
+{background-image:url(%%rock-candy%%);display:block;float:left;}
+
+a[href|="/candyderp"] {width:68px;height:70px;background-position: 0 0;}
+a[href|="/rcbored"] {width:77px;height:70px;background-position: -68px 0;}
+a[href|="/rccute"] {width:71px;height:70px;background-position: -145px 0;}
+a[href|="/rcfacehoof"] {width:64px;height:70px;background-position: -216px 0;}
+a[href|="/rchahaha"] {width:60px;height:70px;background-position: -280px 0;}
+a[href|="/rchuhhuh"] {width:69px;height:70px;background-position: -340px 0;}
+a[href|="/rcsly"] {width:68px;height:70px;background-position: -409px 0;}
+a[href|="/rcpoker"] {width:145px;height:150px;background-position: 0 -70px;}
+
+/* END OF ROCK CANDY */
 
 /* END OF EMOTE SPRITESHEETS */
