--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -644,7 +644,7 @@ a[href="/freakout"]:hover:after {
      
     .titlebox .usertext-body .md ol {
     width: auto;
-    background: url(%%portalsign%%) no-repeat scroll 1px 1px #fff;
+    background: url(%%horsemann%%) no-repeat scroll 1px 1px #fff;
     border: 1px solid #F2622A;
     position: absolute;
     top: 5px;
