--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -64,7 +64,7 @@
                                           @Y.@. NB ::::::: @U.:::::::: 0M :::::.:@.,:, O7i@@
                                           rS@@v,@u ,:::::: @O ::::::::,,@,,:::,. @7.7UN@@J
                                               :U@ZSur:,... E8 ....,,... OS ,:rjFF@@q5v: 
-                                                   .rUuLJYiG8i77777r777;PO7u2L,.                      http://fav.me/d6kc256
+                                                   .rUuLJYiG8i77777r777;PO7u2L,.                      https://derpibooru.org/414830
 */
 
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
@@ -261,9 +261,10 @@ a[href|="/sp"] + .reddit_show_hidden_emotes_span{display:none}
 a[href^="/"][href*="-in-"],a[href^="/"][href$="-in"],a[href^="/"][href*="-inp-"],a[href^="/"][href$="-inp"]{float:none!important;display: inline-block!important}
 
 body a[href="/spoiler"]{background:black!important;color:black!important}
-body a[href="/spoiler"]:hover{color:white!important}/*Pinkie Pie NPT Warnings*//*DO _NOT_ PUT ANY COMMENTS IN-BETWEEN THE NPTWARNING TAGS! Do not remove the tags either, they are used by modtool and the bot! The tags must be on their own line!*/
+body a[href="/spoiler"]:hover{color:white!important}
+/*Pinkie Pie NPT Warnings*/
+/*DO _NOT_ PUT ANY COMMENTS IN-BETWEEN THE NPTWARNING TAGS! Do not remove the tags either, they are used by modtool and the bot! The tags must be on their own line!*/
 /*{NPTWARNING}
-/*
 .formtabs-content .infobar
 {
  margin-left:50px;
@@ -291,8 +292,8 @@ body a[href="/spoiler"]:hover{color:white!important}/*Pinkie Pie NPT Warnings*//
 {
  background:url(%%pinkiemessage%%) no-repeat;
 }
-/*
 {/NPTWARNING}*/
+
 /* Spoiler Setter*/
 .marknsfw-button a[href="#"], .unmarknsfw-button a[href="#"]
 {
@@ -553,10 +554,10 @@ background-color: white;
  text-indent:-9999px;
  line-height: 240%;}
 a[href|="/ajlie"],a[href|="/a00"],a[href|="/priceless"],a[href|="/a10"],a[href|="/flutterjerk"],a[href|="/a20"],a[href|="/flutterroll"],a[href|="/a30"],a[href|="/twipride"],a[href|="/a01"],a[href|="/celestiamad"],a[href|="/a11"],a[href|="/twicrazy"],a[href|="/a21"],a[href|="/spikemeh"],a[href|="/a31"],a[href|="/lunateehee"],a[href|="/a02"],a[href|="/lunawait"],a[href|="/a12"],a[href|="/paperbagderpy"],a[href|="/paperbagwizard"],a[href|="/derpwizard"],a[href|="/a22"],a[href|="/abmeh"],a[href|="/a32"],a[href|="/ajhappy"],a[href|="/happlejack"],a[href|="/a03"],a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/a13"],a[href|="/twibeam"],a[href|="/a23"],a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/a33"],a[href|="/raritydaww"],a[href|="/a04"],a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/a14"],a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/a34"],a[href|="/ajsup"],a[href|="/ajwhatsgood"],a[href|="/a05"],a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/a15"],a[href|="/rdcry"],a[href|="/a25"],a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/a35"],a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/a06"],a[href|="/ppcute"],a[href|="/cutiepie"],a[href|="/a16"],a[href|="/abbored"],a[href|="/abmerp"],a[href|="/a26"],a[href|="/rarityreally"],a[href|="/a36"],a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/a07"],a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/a17"],a[href|="/scootaplease"],a[href|="/scootappeal"],a[href|="/scootaplz"],a[href|="/a27"],a[href|="/applegasp"],a[href|="/a37"],a[href|="/twiright"],a[href|="/satistwied"],a[href|="/a08"],a[href|="/celestiawut"],a[href|="/wutlestia"],a[href|="/a18"],a[href|="/grannysmith"],a[href|="/granny"],a[href|="/oldmareyellsatcloud"],a[href|="/a28"],a[href|="/rarishock"],a[href|="/a38"],a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/a09"],a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[href|="/a19"],a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/princesscadence"],a[href|="/princessmiamorecadenza"],a[href|="/a29"],a[href|="/applederp"],a[href|="/a39"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%amotes-googly%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%amotes%%)!important}
 
 a[href|="/rajlie"],a[href|="/ra00"],a[href|="/rpriceless"],a[href|="/ra10"],a[href|="/rflutterjerk"],a[href|="/ra20"],a[href|="/rflutterroll"],a[href|="/ra30"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/rcelestiamad"],a[href|="/ra11"],a[href|="/rtwicrazy"],a[href|="/ra21"],a[href|="/rspikemeh"],a[href|="/ra31"],a[href|="/rlunateehee"],a[href|="/ra02"],a[href|="/rlunawait"],a[href|="/ra12"],a[href|="/rpaperbagderpy"],a[href|="/rpaperbagwizard"],a[href|="/rderpwizard"],a[href|="/ra22"],a[href|="/rabmeh"],a[href|="/ra32"],a[href|="/rajhappy"],a[href|="/rhapplejack"],a[href|="/ra03"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/ra13"],a[href|="/rtwibeam"],a[href|="/ra23"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/ra33"],a[href|="/rraritydaww"],a[href|="/ra04"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/ra14"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/ra34"],a[href|="/rajsup"],a[href|="/rajwhatsgood"],a[href|="/ra05"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/ra15"],a[href|="/rrdcry"],a[href|="/ra25"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/ra35"],a[href|="/rohcomeon"],a[href|="/rsbcomeon"],a[href|="/ra06"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/ra16"],a[href|="/rabbored"],a[href|="/rabmerp"],a[href|="/ra26"],a[href|="/rrarityreally"],a[href|="/ra36"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ra07"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/ra17"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/ra27"],a[href|="/rapplegasp"],a[href|="/ra37"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/ra08"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/ra18"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/ra28"],a[href|="/rrarishock"],a[href|="/ra38"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/ra09"],a[href|="/rchrysalis"],a[href|="/rqueenchrysalis"],a[href|="/rchangelingqueen"],a[href|="/ra19"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadance"],a[href|="/rprincesscadence"],a[href|="/rprincessmiamorecadenza"],a[href|="/ra29"],a[href|="/rapplederp"],a[href|="/ra39"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%amotes-googly%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%amotes%%)!important}
 
 a[href|="/swagintosh"],a[href|="/a24"],a[href|="/rswagintosh"],a[href|="/ra24"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%swagintosh-sheet%%)!important}
@@ -568,10 +569,10 @@ a[href|="/rflutterfear"],a[href|="/rb00"],a[href|="/rppboring"],a[href|="/rb10"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes%%)!important}
 
 a[href|="/rdsitting"],a[href|="/c00"],a[href|="/rdhappy"],a[href|="/c10"],a[href|="/rdannoyed"],a[href|="/c20"],a[href|="/trixiesad"],a[href|="/c30"],a[href|="/twismug"],a[href|="/c01"],a[href|="/twismile"],a[href|="/c11"],a[href|="/twistare"],a[href|="/c21"],a[href|="/changeling"],a[href|="/c31"],a[href|="/ohhi"],a[href|="/c02"],a[href|="/party"],a[href|="/c12"],a[href|="/hahaha"],a[href|="/c22"],a[href|="/rdscared"],a[href|="/c32"],a[href|="/flutterblush"],a[href|="/c03"],a[href|="/gross"],a[href|="/c13"],a[href|="/derpyhappy"],a[href|="/c23"],a[href|="/twidaw"],a[href|="/c33"],a[href|="/ajfrown"],a[href|="/c04"],a[href|="/hmmm"],a[href|="/c14"],a[href|="/joy"],a[href|="/c24"],a[href|="/whattheflut"],a[href|="/c34"],a[href|="/raritysad"],a[href|="/c05"],a[href|="/fabulous"],a[href|="/c15"],a[href|="/derp"],a[href|="/c25"],a[href|="/c35"],a[href|="/cadencesmile"],a[href|="/cadancesmile"],a[href|="/shiningpride"],a[href|="/c36"],a[href|="/louder"],a[href|="/c06"],a[href|="/lunasad"],a[href|="/c16"],a[href|="/derpyshock"],a[href|="/c26"],a[href|="/pinkamina"],a[href|="/c07"],a[href|="/loveme"],a[href|="/c17"],a[href|="/lunagasp"],a[href|="/c27"],a[href|="/scootaloo"],a[href|="/fluttercry"],a[href|="/c37"],a[href|="/c08"],a[href|="/celestia"],a[href|="/c18"],a[href|="/angel"],a[href|="/c28"],a[href|="/allmybits"],a[href|="/sneakybelle"],a[href|="/c38"],a[href|="/ppreally"],a[href|="/c39"],a[href|="/c09"],a[href|="/zecora"],a[href|="/c19"],a[href|="/photofinish"],a[href|="/c29"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%cmotes-googly%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%cmotes%%)!important}
 
 a[href|="/rrdsitting"],a[href|="/rc00"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rrdannoyed"],a[href|="/rc20"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/rtwismile"],a[href|="/rc11"],a[href|="/rtwistare"],a[href|="/rc21"],a[href|="/rchangeling"],a[href|="/rc31"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/rparty"],a[href|="/rc12"],a[href|="/rhahaha"],a[href|="/rc22"],a[href|="/rrdscared"],a[href|="/rc32"],a[href|="/rflutterblush"],a[href|="/rc03"],a[href|="/rgross"],a[href|="/rc13"],a[href|="/rderpyhappy"],a[href|="/rtwidaw"],a[href|="/rc33"],a[href|="/rc23"],a[href|="/rajfrown"],a[href|="/rc04"],a[href|="/rhmmm"],a[href|="/rc14"],a[href|="/rjoy"],a[href|="/rc24"],a[href|="/rwhattheflut"],a[href|="/rc34"],a[href|="/rraritysad"],a[href|="/rc05"],a[href|="/rfabulous"],a[href|="/rc15"],a[href|="/rderp"],a[href|="/rc25"],a[href|="/rc35"],a[href|="/rcadencesmile"],a[href|="/rcadancesmile"],a[href|="/rshiningpride"],a[href|="/rc36"],a[href|="/rlouder"],a[href|="/rc06"],a[href|="/rlunasad"],a[href|="/rc16"],a[href|="/rderpyshock"],a[href|="/rc26"],a[href|="/rpinkamina"],a[href|="/rc07"],a[href|="/rloveme"],a[href|="/rc17"],a[href|="/rlunagasp"],a[href|="/rc27"],a[href|="/rscootaloo"],a[href|="/rfluttercry"],a[href|="/rc37"],a[href|="/rc08"],a[href|="/rcelestia"],a[href|="/rc18"],a[href|="/rangel"],a[href|="/rc28"],a[href|="/rallmybits"],a[href|="/rsneakybelle"],a[href|="/rc38"],a[href|="/rc09"],a[href|="/rzecora"],a[href|="/rc19"],a[href|="/rphotofinish"],a[href|="/rc29"],a[href|="/rppreally"],a[href|="/rc39"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%cmotes-googly%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%cmotes%%)!important}
 
 a[href|="/fillytgap"],a[href|="/t00"],a[href|="/e00"],a[href|="/rdhuh"],a[href|="/e10"],a[href|="/snails"],a[href|="/e20"],a[href|="/twisad"],a[href|="/e30"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/bonbon"],a[href|="/e11"],a[href|="/spitfire"],a[href|="/e21"],a[href|="/cutealoo"],a[href|="/e02"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/e12"],a[href|="/sotrue"],a[href|="/e22"],a[href|="/wahaha"],a[href|="/e03"],a[href|="/sbstare"],a[href|="/e13"],a[href|="/berry"],a[href|="/punchdrunk"],a[href|="/e23"],a[href|="/huhhuh"],a[href|="/e04"],a[href|="/absmile"],a[href|="/e14"],a[href|="/dealwithit"],a[href|="/e24"],a[href|="/nmm"],a[href|="/blacksnooty"],a[href|="/queenmeanie"],a[href|="/hokeysmokes"],a[href|="/e05"],a[href|="/whooves"],a[href|="/e15"],a[href|="/rdsalute"],a[href|="/e25"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/e06"],a[href|="/colgate"],a[href|="/e16"],a[href|="/cheerilee"],a[href|="/e26"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/e07"],a[href|="/abhuh"],a[href|="/e17"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/e27"],a[href|="/twiponder"],a[href|="/e08"],a[href|="/spikewtf"],a[href|="/e18"],a[href|="/awwyeah"],a[href|="/e28"],a[href|="/gilda"],a[href|="/e09"],a[href|="/discentia"],a[href|="/discentiastare"],a[href|="/disstare"],a[href|="/e19"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/e29"], a[href|="/e31"], a[href|="/lunamad"], a[href|="/e32"], a[href|="/discordsad"], a[href|="/e33"], a[href|="/maud"], a[href|="/e34"], a[href|="/pinkiepout"],a[href|="/e35"],a[href|="/e36"],a[href|="/e37"],a[href|="/e38"],a[href|="/e39"],a[href|="/re35"],a[href|="/re36"],a[href|="/re37"],a[href|="/re38"],a[href|="/re39"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%emotes%%)!important}
@@ -829,11 +830,11 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 
 .side .md table th + th:after {font-weight:normal;}
 .side .md table:nth-of-type(1) th:nth-of-type(1):after {content:"a";}
-.side .md table:nth-of-type(1) tr:nth-of-type(odd) td + td:after {background-image:url(%%amotes-googly%%);}
+.side .md table:nth-of-type(1) tr:nth-of-type(odd) td + td:after {background-image:url(%%amotes%%);}
 .side .md table:nth-of-type(2) th:nth-of-type(1):after {content:"b";}
 .side .md table:nth-of-type(2) tr:nth-of-type(odd) td + td:after {background-image:url(%%bmotes%%);}
 .side .md table:nth-of-type(3) th:nth-of-type(1):after {content:"c";}
-.side .md table:nth-of-type(3) tr:nth-of-type(odd) td + td:after {background-image:url(%%cmotes-googly%%);}
+.side .md table:nth-of-type(3) tr:nth-of-type(odd) td + td:after {background-image:url(%%cmotes%%);}
 .side .md table:nth-of-type(4) th:nth-of-type(1):after {content:"e";}
 .side .md table:nth-of-type(4) tr:nth-of-type(odd) td + td:after {background-image:url(%%emotes%%);}
 .side .md table td {padding:0;}
